welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:17: error: value update is not a member of Boolean
} while (croisement()=1) 
         ^